--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
             touch-action: none;
             overflow: hidden;
             background-image: url('background_img.png');
-            background-size: 100% 100%;
+            background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
         }
+
         /* Основное содержимое */
         .main-content {
             display: flex;
@@ -34,17 +35,19 @@
             width: 100%;
             position: relative;
             overflow: hidden;
+            padding: 20px;
         }
+
         .coin-icon {
             width: 150px;
             height: 150px;
             background: url('coin.png') no-repeat center;
             background-size: contain;
             margin-bottom: 20px;
-            margin-top: -150px;
         }
+
         .coin-count {
-            font-size: 40px;
+            font-size: 5vw;
             font-weight: bold;
             text-align: center;
             margin-bottom: 10px;
@@ -52,16 +55,7 @@
             letter-spacing: 1px;
             color: white;
         }
-        .view-history {
-            font-size: 14px;
-            color: rgba(255, 255, 255, 0.6);
-            cursor: pointer;
-            text-decoration: none;
-            margin-bottom: 20px;
-        }
-        .view-history:hover {
-            color: white;
-        }
+
         /* Кнопки внизу экрана */
         .buttons {
             display: flex;
@@ -72,6 +66,7 @@
             padding: 10px;
             background-color: transparent;
         }
+
         .button {
             background-color: transparent;
             border: none;
@@ -83,82 +78,35 @@
             justify-content: center;
             align-items: center;
         }
+
         .button img {
             width: 30px;
             height: 30px;
             filter: brightness(0.7);
             transition: filter 0.2s ease;
         }
+
         .button-label {
             font-size: 10px;
             color: rgba(255, 255, 255, 0.6);
             margin-top: 5px;
             transition: color 0.2s ease;
         }
+
         .button.active img {
             filter: brightness(1);
         }
+
         .button.active .button-label {
             color: white;
         }
+
         .hidden {
             display: none;
         }
-        /* Модальное окно истории */
-        .history-modal {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.8);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            z-index: 1000;
-            visibility: hidden;
-            opacity: 0;
-            transition: visibility 0s, opacity 0.5s;
-            overflow: auto;
-        }
-        .history-content {
-            background: rgba(0, 0, 0, 0.9);
-            padding: 20px;
-            border-radius: 8px;
-            position: relative;
-            width: 90%;
-            max-width: 800px;
-            text-align: center;
-            max-height: 80%;
-            overflow-y: auto;
-        }
-        .history-content h2 {
-            margin-top: 0;
-            color: white;
-        }
-        .history-content p {
-            margin: 10px 0;
-            color: white;
-        }
-        .close-btn {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            background: none;
-            border: none;
-            color: white;
-            font-size: 24px;
-            cursor: pointer;
-            padding: 0;
-            margin: 0;
-            z-index: 1001;
-        }
-        .close-btn:hover {
-            color: #ccc;
-        }
+
         .task-container {
-            width: 100%;
+            width: 90%;
             max-width: 600px;
             background: #333;
             border-radius: 8px;
@@ -170,6 +118,7 @@
             box-sizing: border-box;
             text-align: center;
         }
+
         .task-icon {
             width: 40px;
             height: 40px;
@@ -177,19 +126,23 @@
             background-size: contain;
             margin-right: 15px;
         }
+
         .task-text {
             flex-grow: 1;
         }
+
         .task-text h3 {
             margin: 0;
             font-size: 18px;
             color: white;
         }
+
         .task-text p {
             margin: 5px 0 0;
             font-size: 14px;
             color: white;
         }
+
         .claim-button {
             background: #007bff;
             border: none;
@@ -201,9 +154,40 @@
             transition: background 0.3s;
             margin-left: 20px;
         }
-        .claim-button.claimed {
-            background: #6c757d;
-            cursor: default;
+
+        /* Адаптивный дизайн для мобильных устройств */
+        @media (max-width: 600px) {
+            .coin-icon {
+                width: 100px;
+                height: 100px;
+            }
+
+            .coin-count {
+                font-size: 6vw;
+            }
+
+            .task-container {
+                padding: 10px;
+            }
+
+            .claim-button {
+                padding: 8px 16px;
+                font-size: 14px;
+            }
+
+            .buttons {
+                padding: 5px;
+            }
+
+            .button {
+                width: 40px;
+                height: 60px;
+            }
+
+            .button img {
+                width: 25px;
+                height: 25px;
+            }
         }
     </style>
 </head>
@@ -212,8 +196,7 @@
     <!-- Основная страница с иконкой монеты и счетчиком -->
     <div id="home" class="main-content">
         <div class="coin-icon"></div>
-        <div class="coin-count">Coins: <span id="coin-count">0</span></div>
-        <div class="view-history" onclick="showHistory()">View history</div>
+        <div class="coin-count">Zeus Points: <span id="coin-count">0</span></div>
     </div>
 
     <!-- Страница с заданиями -->
@@ -263,17 +246,9 @@
             <span class="button-label"><b>Leaderboard</b></span>
         </button>
         <button class="button" onclick="activateButton(this); showBlackScreen();">
-            <img src="wallet_icon.png" alt="Black Screen">
+            <img src="wallet_icon.png" alt="Wallet">
             <span class="button-label"><b>Wallet</b></span>
         </button>
-    </div>
-
-    <!-- Модальное окно истории -->
-    <div id="history-modal" class="history-modal">
-        <div id="history-content" class="history-content">
-            <button class="close-btn" onclick="hideHistory()">×</button>
-            <!-- История будет обновляться динамически с помощью JavaScript -->
-        </div>
     </div>
 
     <script async src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -336,38 +311,12 @@
             document.getElementById('black-screen').classList.remove('hidden');
         }
 
-        // Функция для показа модального окна истории
-        function showHistory() {
-            const historyContent = document.getElementById('history-content');
-            let historyText = '<h2>History</h2>';
-
-            if (coinHistory.length === 0) {
-                historyText += '<p>No history available.</p>';
-            } else {
-                historyText += '<p>Coins earned:</p>';
-                coinHistory.forEach((amount, index) => {
-                    historyText += `<p>Earned ${amount} ZEUS (Task ${index + 1})</p>`;
-                });
-            }
-
-            historyContent.innerHTML = historyText;
-            document.getElementById('history-modal').style.visibility = 'visible';
-            document.getElementById('history-modal').style.opacity = 1;
-        }
-
-        // Функция для скрытия модального окна истории
-        function hideHistory() {
-            document.getElementById('history-modal').style.visibility = 'hidden';
-            document.getElementById('history-modal').style.opacity = 0;
-        }
-
-        // Функция для обработки кнопки "Claim" на заданиях
+        // Функция для задания и получения монет
         function claimTask(button) {
-            if (button.classList.contains('claimed')) return; // Если кнопка уже была нажата
-
-            button.classList.add('claimed');
-            addCoins(500); // Добавляем монеты на баланс
-            window.open('https://t.me/your_channel', '_blank'); // Открываем канал
+            addCoins(500); // Добавляем 500 ZEUS монет
+            button.textContent = 'Claimed';
+            button.disabled = true;
+            button.style.backgroundColor = 'grey';
         }
     </script>
 </body>
