--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         }
 
         .coin-icon {
-            width: 150px;
-            height: 150px;
+            width: 300px;
+            height: 300px;
             background: url('coin.png') no-repeat center;
             background-size: contain;
             margin-bottom: 20px;
@@ -62,7 +62,7 @@
             justify-content: space-around;
             width: 100%;
             position: fixed;
-            bottom: 0;
+            bottom: 1vh;
             padding: 10px;
             background-color: transparent;
         }
@@ -91,6 +91,7 @@
             color: rgba(255, 255, 255, 0.6);
             margin-top: 5px;
             transition: color 0.2s ease;
+            text-align: center;
         }
 
         .button.active img {
@@ -106,7 +107,7 @@
         }
 
         .task-container {
-            width: 90%;
+            width: 100%;
             max-width: 600px;
             background: #333;
             border-radius: 8px;
@@ -120,11 +121,11 @@
         }
 
         .task-icon {
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
             background: url('task1.png') no-repeat center;
             background-size: contain;
-            margin-right: 15px;
+            margin-right: 13px;
         }
 
         .task-text {
@@ -163,7 +164,7 @@
             }
 
             .coin-count {
-                font-size: 6vw;
+                font-size: 10vw;
             }
 
             .task-container {
