--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             background: url('coin.png') no-repeat center;
             background-size: contain;
             margin-bottom: 20px;
+            margin-top: -20vh;
         }
 
         .coin-count {
